<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.anhtd.instantship.viewModel.RegisterViewModel" />

        <variable
            name="handler"
            type="com.anhtd.instantship.view.activity.RegisterActivity.RegisterHandler" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_x05x"
                    android:layout_marginTop="@dimen/dimen_x05x"
                    android:src="@drawable/round_arrow_back_ios_white_24" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/content_logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.57"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5x"
                android:layout_marginRight="@dimen/dimen_5x"
                android:layout_marginTop="@dimen/dimen_3x"
                android:background="@drawable/bg_boder_single"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edittext_bg_top"
                    android:hint="@string/phone_number_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_1x" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edittext_bg_center"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_1x" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edttext_bg_bottom"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_1x" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rdg_ship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5x"
                android:layout_marginRight="@dimen/dimen_5x"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_category_shipper"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/category_shipper" />

                <RadioButton
                    android:id="@+id/rbtn_category_find_ship"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/category_find_ship" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5x"
                android:layout_marginRight="@dimen/dimen_5x"
                android:layout_marginTop="@dimen/dimen_1x"
                android:background="@drawable/bg_button_main"
                android:onClick="@{handler::onRegister}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_have_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_1x"
                    android:text="@string/login" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13">

            <TextView
                android:id="@+id/tv_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>


</layout>
